--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@mui/x-date-pickers": "^8.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
     "prop-types": "^15.8.1",
     "proptype": "^1.0.0",
@@ -20,10 +22,12 @@
     "react": "^19.0.0",
     "react-admin": "^5.6.3",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.14",
     "zod": "^3.24.2"
   },
